[project]
name = "anki"
dynamic = ["version"]
requires-python = ">=3.9"
license = "AGPL-3.0-or-later"
dependencies = [
  "beautifulsoup4",
  "decorator",
  "markdown",
  "orjson",
  "protobuf>=4.21",
  "requests[socks]",
  "typing_extensions",
  "types-protobuf",
  "types-requests",
  "types-orjson",
  # platform-specific dependencies
  "distro; sys_platform != 'darwin' and sys_platform != 'win32'",
  "psutil; sys_platform == 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["anki"]

[tool.hatch.version]
source = "code"
path = "../python/version.py"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"
