[package]
name = "ankirspy"
version = "2.1.24" # automatically updated
edition = "2018"
authors = ["Ankitects Pty Ltd and contributors"]

[dependencies]
anki = { path = "../rslib" }
tokio = "0.2.11"

[dependencies.pyo3]
version = "0.8.0"
features = ["extension-module"]

[lib]
name = "ankirspy"
crate-type = ["cdylib"]
