[package]
name = "ankirspy"
version = "2.1.25"  # automatically updated
edition = "2018"
authors = ["Ankitects Pty Ltd and contributors <https://help.ankiweb.net>"]
license = "AGPL-3.0-or-later"
description = "Anki's Rust library code Python bindings"
readme = "README.md"

[features]
# The reason we do this is because python tests don't get cfg(test)
# See: https://github.com/rust-lang/cargo/issues/4669
timetest = ["anki/timetest"]

[dependencies]
anki = { path = "../rslib" }
tokio = "0.2.11"

[dependencies.pyo3]
version = "0.8.0"
features = ["extension-module"]

[lib]
name = "ankirspy"
crate-type = ["cdylib"]
