[package]
name = "ankirspy"
version = "2.1.29"  # automatically updated
edition = "2018"
authors = ["Ankitects Pty Ltd and contributors <https://help.ankiweb.net>"]
license = "AGPL-3.0-or-later"
description = "Anki's Rust library code Python bindings"
readme = "README.md"

[dependencies]
anki = { path = "../rslib" }

[dependencies.pyo3]
version = "0.8.0"
features = ["extension-module"]

[lib]
name = "ankirspy"
crate-type = ["cdylib"]
