load("@io_bazel_rules_sass//:defs.bzl", "sass_library")

sass_library(
    name = "base_lib",
    srcs = [
        "_fusion-vars.scss",
        "_vars.scss",
        "base.scss",
        "bootstrap-dark.scss",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//sass/bootstrap",
    ],
)

sass_library(
    name = "buttons_lib",
    srcs = [
        "_fusion-vars.scss",
        "buttons.scss",
    ],
    visibility = ["//visibility:public"],
)

sass_library(
    name = "card_counts_lib",
    srcs = [
        "card-counts.scss",
    ],
    visibility = ["//visibility:public"],
)

# minimal definitions used by AnkiMobile's editor - should be safe to remove
# once AnkiMobile switches to the new editor code in the future
sass_library(
    name = "core_lib",
    srcs = [
        "_vars.scss",
        "core.scss",
    ],
    visibility = ["//visibility:public"],
)

sass_library(
    name = "scrollbar_lib",
    srcs = [
        "scrollbar.scss",
    ],
    visibility = ["//visibility:public"],
)

sass_library(
    name = "breakpoints_lib",
    srcs = [
        "breakpoints.scss",
    ],
    visibility = ["//visibility:public"],
)

sass_library(
    name = "button_mixins_lib",
    srcs = [
        "_button-mixins.scss",
        "_fusion-vars.scss",
    ],
    visibility = ["//visibility:public"],
)

sass_library(
    name = "night_mode_lib",
    srcs = [
        "night-mode.scss",
    ],
    visibility = ["//visibility:public"],
)

sass_library(
    name = "elevation_lib",
    srcs = [
        "elevation.scss",
    ],
    visibility = ["//visibility:public"],
)

exports_files(
    ["_vars.scss"],
    visibility = ["//visibility:public"],
)
